# e19-4yp-Out-of-domain-generalization-in-Computer-Vision

./: .gitignore  README.md  analyze.py  main.py  mock_run.py  pyproject.toml  test_adapters.py  test_adapters_real_data.py  test_margin_score.py
BioMedClip/: .gitignore  README.md  base_eval.py  base_val_per_domain.py  custom_dataset.py  custom_v2.py  metric_cal_by_centers.py  test.py
BioMedClip_Base_Eval/: README.md  base_val_per_domain.py  load_model.py  test.ipynb
BioMedClip_ClipAdapter/: .gitignore  clip_adapter_biomedclip.py  clip_adapter_eval.py  data.py  main.py  utils.py
BioMedClip_CoOP/: .env  .gitignore  README.md  biomed_coop.py  data.py  environment.yml  main.py  utils.py
BiomedCLIP_EA_Experiments/: .gitignore  .prompt_optimizer.py.swp  EA_cycle.py  EA_only copy.py  EA_only.py  EA_only_reg_50itr.py  EA_only_reg_v1.py  EA_only_reg_v2.py  EA_only_reg_v3.py  EA_only_with_pd.py  EA_only_with_pd_v2.py  EA_prompts.py  analyze-log-file.ipynb  crowd_pruning.ipynb  crowd_pruning.py  crowd_pruningv2,py  crowd_pruningv2.py  ensemble_prompts.py  evaluate_prompts.py  initial_prompts.txt  instruction_prompt_optimizer.py  opt_only_pairs.txt  prompt_optimizer.py  test.ipynb  test_s.ipynb  tests_results.txt  util.py
BiomedCLIP_Explorations/: adapter_weights.pth  best_prompt_pairs.txt  domain_shift.ipynb  evaluate_prompts.py  llm_prompting.ipynb  prompt_learner.py  selected_prompts.txt  train_adapter.py  train_adapter_with_textemb.py
BiomedCLIP_with_CLIPood/: config.py  main.py  requirements.txt  setup_env.sh  train.py
CLIP_Explorations/: adapter.pth  domain_shift.ipynb  eval_office.py  eval_pacs.py  train_adapter.py
CheXpert/: base_eval.py  base_eval_selected.py
Final_Demo/: biomedclip_tumor_detection.html  test.py
LLMs/: biomistral.py  ollama_test.py
Prompt_Filtering/: best_prompt_pairs.txt  remove_language_style_prompt.txt  remove_medical_prompt.txt
XCoOp_Org/: train.py  train_script.sh  train_script_camelyon.sh  train_script_camelyon1shot.sh  train_script_camelyon2shot.sh  train_script_camelyon4shot.sh  train_script_camelyon8shot.sh  train_script_derm7pt.sh  train_script_derm7pt1shot.sh  train_script_derm7pt2shot.sh  train_script_derm7pt4shot.sh  train_script_derm7pt8shot.sh  train_script_derm7pt_fullshot.sh  train_script_nihchest.sh  train_script_nihchest1shot.sh  train_script_nihchest2shot.sh  train_script_nihchest4shot.sh  train_script_nihchest8shot.sh  train_script_wbcatt.sh  train_script_wbcatt1shot.sh  train_script_wbcatt2shot.sh  train_script_wbcatt4shot.sh  train_script_wbcatt8shot.sh  train_script_wbcatt_fullshot.sh
docs/: README.md
(+449 files in other folders)
