[project]
name = "biomedxpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.56.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "open-clip-torch==2.23.0",
    "openai>=2.14.0",
    "pandas>=2.2.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "tenacity>=9.1.2",
    "torch>=2.9.1",
    "transformers==4.35.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.251201",
    "ruff>=0.14.10",
    "scipy-stubs>=1.16.3.3",
    "types-colorama>=0.4.15.20250801",
    "types-decorator>=5.2.0.20251101",
    "types-defusedxml>=0.7.0.20250822",
    "types-jsonschema>=4.25.1.20251009",
    "types-networkx>=3.6.1.20251220",
    "types-pexpect>=4.9.0.20250916",
    "types-protobuf>=6.32.1.20251210",
    "types-pygments>=2.19.0.20251121",
    "types-tabulate>=0.9.0.20241207",
    "types-tqdm>=4.67.0.20250809",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biomedxpro"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test",
]

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "open_clip.*",
    "open_clip"
]
ignore_missing_imports = true